force-app/main/default/objects/DocumentSendTracking__c/DocumentSendTracking__c.object-meta.xml
<CustomObject>
    <description>AutoNumber {&quot;DTK-{00000000}&quot;}</description>
    <label>Comunicazione Documentale</label>
    <nameField>
        <displayFormat>DTK-{00000000}</displayFormat>
        <label>Numero Comunicazione</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comunicazioni Documentali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>