force-app/main/default/objects/DocumentSendTracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comunicazioni Documentali</relationshipLabel>
    <relationshipName>Comunicazioni_Documentali</relationshipName>
    <type>Lookup</type>
</CustomField>