force-app/main/default/objects/DocumentSendTracking__c/fields/BounceReason__c.field-meta.xml
<CustomField>
    <fullName>BounceReason__c</fullName>
    <description>Motivazione bounce dell&apos;Email di Docusign</description>
    <label>Motivazione Bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>