force-app/main/default/objects/DocumentSendTracking__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Comunicazioni Documentali</relationshipLabel>
    <relationshipName>Comunicazioni_Documentali</relationshipName>
    <type>Lookup</type>
</CustomField>