force-app/main/default/objects/DocumentSendTracking__c/fields/EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeId__c</fullName>
    <description>Codice univoco del plico generato da E1</description>
    <label>Id Plico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>