force-app/main/default/objects/DocumentSendTracking__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order</description>
    <label>Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Comunicazioni Documentali</relationshipLabel>
    <relationshipName>Comunicazioni_Documentali</relationshipName>
    <type>Lookup</type>
</CustomField>