force-app/main/default/objects/DocumentSendTracking__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <description>Destinatario della comunicazione documentale</description>
    <label>Destinatario</label>
    <type>Email</type>
</CustomField>