force-app/main/default/objects/DocumentSendTracking__c/fields/SendMode__c.field-meta.xml
<CustomField>
    <fullName>SendMode__c</fullName>
    <description>Indica la modalità di invio della documentazione</description>
    <label>Modalità invio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SendMode</valueSetName>
    </valueSet>
</CustomField>