force-app/main/default/objects/DocumentSendTracking__c/fields/SignatureMethod__c.field-meta.xml
<CustomField>
    <fullName>SignatureMethod__c</fullName>
    <label>Metodo Firma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>