force-app/main/default/objects/DocumentSendTracking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipologia Comunicazione</description>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estratto Conto</fullName>
            </value>
            <value>
                <fullName>Plico</fullName>
            </value>
            <value>
                <fullName>Plico Contrattuale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>